deployments/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: backend-db
          image: gcr.io/vois-358709/redis
          ports:
            - containerPort: 6379
