deployments/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
